fix(sponsors): make mini logo bigger and align top

--- a/sass/components/_sponsors.scss
+++ b/sass/components/_sponsors.scss
@@ -89,11 +89,12 @@
   display: flex;
   .bmw-and-mini-logo {
     display: flex;
+    align-items: start;
     .bmw-logo {
       width: 60px;
     }
     .mini-logo {
-      width: 70px;
+      width: 110px;
     }
   }
 }
